update currencies API to make namespace optional for root currencies
